# CPSC330-hw5

./: hw5.ipynb  pyproject.toml
